force-app/main/default/objects/API_Field_Processing_Detail__c/API_Field_Processing_Detail__c.object-meta.xml
<CustomObject>
    <label>API Field Processing Detail</label>
    <nameField>
        <displayFormat>AFPD-{0000}</displayFormat>
        <label>API field Processing Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Field Processing Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>