force-app/main/default/objects/API_Field_Processing_Detail__c/fields/API_Calling_System_Details__c.field-meta.xml
<CustomField>
    <fullName>API_Calling_System_Details__c</fullName>
    <label>API Calling System Details</label>
    <referenceTo>API_Calling_System_Details__c</referenceTo>
    <relationshipLabel>API Field Processing Details</relationshipLabel>
    <relationshipName>API_field_Processing_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>