force-app/main/default/objects/API_Field_Processing_Detail__c/fields/API_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Label_Name__c</fullName>
    <label>API Label Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>