force-app/main/default/objects/API_Field_Processing_Detail__c/fields/Data_Type_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Data_Type_Conversion__c</fullName>
    <label>Data Type Conversion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>