force-app/main/default/objects/API_Field_Processing_Detail__c/fields/Error_Meassage__c.field-meta.xml
<CustomField>
    <fullName>Error_Meassage__c</fullName>
    <label>Error Meassage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>