force-app/main/default/objects/API_Field_Processing_Detail__c/fields/Object_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Field_API_Name__c</fullName>
    <label>Object Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>